--- a/checkout.html
+++ b/checkout.html
@@ -85,83 +85,21 @@
                                         ><i
                                             class="fa fa-heart-o"
                                             aria-hidden="true"
-                                        ></i
+                                        ></i>
+                                        <span
+                                            data-store-el="favoriteProductsCounter"
+                                            class="total-count"
+                                        ></span
                                     ></a>
                                 </div>
                                 <div class="sinlge-bar shopping">
-                                    <a href="#" class="single-icon"
+                                    <a href="cart.html" class="single-icon"
                                         ><i class="ti-bag"></i>
-                                        <span class="total-count">2</span></a
-                                    >
-                                    <!-- Shopping Item -->
-                                    <div class="shopping-item">
-                                        <div class="dropdown-cart-header">
-                                            <span>2 Items</span>
-                                            <a href="#">View Cart</a>
-                                        </div>
-                                        <ul class="shopping-list">
-                                            <li>
-                                                <a
-                                                    href="#"
-                                                    class="remove"
-                                                    title="Remove this item"
-                                                    ><i class="fa fa-remove"></i
-                                                ></a>
-                                                <a class="cart-img" href="#"
-                                                    ><img
-                                                        src="https://via.placeholder.com/70x70"
-                                                        alt="#"
-                                                /></a>
-                                                <h4>
-                                                    <a href="#">Woman Ring</a>
-                                                </h4>
-                                                <p class="quantity">
-                                                    1x -
-                                                    <span class="amount"
-                                                        >$99.00</span
-                                                    >
-                                                </p>
-                                            </li>
-                                            <li>
-                                                <a
-                                                    href="#"
-                                                    class="remove"
-                                                    title="Remove this item"
-                                                    ><i class="fa fa-remove"></i
-                                                ></a>
-                                                <a class="cart-img" href="#"
-                                                    ><img
-                                                        src="https://via.placeholder.com/70x70"
-                                                        alt="#"
-                                                /></a>
-                                                <h4>
-                                                    <a href="#"
-                                                        >Woman Necklace</a
-                                                    >
-                                                </h4>
-                                                <p class="quantity">
-                                                    1x -
-                                                    <span class="amount"
-                                                        >$35.00</span
-                                                    >
-                                                </p>
-                                            </li>
-                                        </ul>
-                                        <div class="bottom">
-                                            <div class="total">
-                                                <span>Total</span>
-                                                <span class="total-amount"
-                                                    >$134.00</span
-                                                >
-                                            </div>
-                                            <a
-                                                href="checkout.html"
-                                                class="btn animate"
-                                                >Checkout</a
-                                            >
-                                        </div>
-                                    </div>
-                                    <!--/ End Shopping Item -->
+                                        <span
+                                            class="total-count"
+                                            data-store-el="cartItemsCounter"
+                                        ></span
+                                    ></a>
                                 </div>
                             </div>
                         </div>
@@ -1103,43 +1041,6 @@
                                             />
                                         </div>
                                     </div>
-                                    <div class="col-lg-6 col-md-6 col-12">
-                                        <div class="form-group">
-                                            <label
-                                                >Postal Code<span
-                                                    >*</span
-                                                ></label
-                                            >
-                                            <input
-                                                type="text"
-                                                name="post"
-                                                placeholder=""
-                                                required="required"
-                                            />
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 col-12">
-                                        <div class="form-group">
-                                            <label>Company<span>*</span></label>
-                                            <select
-                                                name="company_name"
-                                                id="company"
-                                            >
-                                                <option
-                                                    value="company"
-                                                    selected="selected"
-                                                >
-                                                    Microsoft
-                                                </option>
-                                                <option>Apple</option>
-                                                <option>Xaiomi</option>
-                                                <option>Huawer</option>
-                                                <option>Wpthemesgrid</option>
-                                                <option>Samsung</option>
-                                                <option>Motorola</option>
-                                            </select>
-                                        </div>
-                                    </div>
                                 </div>
                             </form>
                             <!--/ End Form -->
@@ -1152,10 +1053,14 @@
                                 <h2>CART TOTALS</h2>
                                 <div class="content">
                                     <ul>
-                                        <li>Sub Total<span>$330.00</span></li>
-                                        <li>(+) Shipping<span>$10.00</span></li>
                                         <li class="last">
-                                            Total<span>$340.00</span>
+                                            Total
+                                            <span>
+                                                $
+                                                <span
+                                                    data-store-el="cartTotal"
+                                                ></span>
+                                            </span>
                                         </li>
                                     </ul>
                                 </div>
@@ -1233,5 +1138,8 @@
         <script src="js/easing.js"></script>
         <!-- Active JS -->
         <script src="js/active.js"></script>
+
+        <script src="js/store.js"></script>
+        <script src="products.js"></script>
     </body>
 </html>
