--- a/favorite.html
+++ b/favorite.html
@@ -85,83 +85,21 @@
                                         ><i
                                             class="fa fa-heart-o"
                                             aria-hidden="true"
-                                        ></i
+                                        ></i>
+                                        <span
+                                            data-store-el="favoriteProductsCounter"
+                                            class="total-count"
+                                        ></span
                                     ></a>
                                 </div>
                                 <div class="sinlge-bar shopping">
-                                    <a href="#" class="single-icon"
+                                    <a href="cart.html" class="single-icon"
                                         ><i class="ti-bag"></i>
-                                        <span class="total-count">2</span></a
-                                    >
-                                    <!-- Shopping Item -->
-                                    <div class="shopping-item">
-                                        <div class="dropdown-cart-header">
-                                            <span>2 Items</span>
-                                            <a href="#">View Cart</a>
-                                        </div>
-                                        <ul class="shopping-list">
-                                            <li>
-                                                <a
-                                                    href="#"
-                                                    class="remove"
-                                                    title="Remove this item"
-                                                    ><i class="fa fa-remove"></i
-                                                ></a>
-                                                <a class="cart-img" href="#"
-                                                    ><img
-                                                        src="https://via.placeholder.com/70x70"
-                                                        alt="#"
-                                                /></a>
-                                                <h4>
-                                                    <a href="#">Woman Ring</a>
-                                                </h4>
-                                                <p class="quantity">
-                                                    1x -
-                                                    <span class="amount"
-                                                        >$99.00</span
-                                                    >
-                                                </p>
-                                            </li>
-                                            <li>
-                                                <a
-                                                    href="#"
-                                                    class="remove"
-                                                    title="Remove this item"
-                                                    ><i class="fa fa-remove"></i
-                                                ></a>
-                                                <a class="cart-img" href="#"
-                                                    ><img
-                                                        src="https://via.placeholder.com/70x70"
-                                                        alt="#"
-                                                /></a>
-                                                <h4>
-                                                    <a href="#"
-                                                        >Woman Necklace</a
-                                                    >
-                                                </h4>
-                                                <p class="quantity">
-                                                    1x -
-                                                    <span class="amount"
-                                                        >$35.00</span
-                                                    >
-                                                </p>
-                                            </li>
-                                        </ul>
-                                        <div class="bottom">
-                                            <div class="total">
-                                                <span>Total</span>
-                                                <span class="total-amount"
-                                                    >$134.00</span
-                                                >
-                                            </div>
-                                            <a
-                                                href="checkout.html"
-                                                class="btn animate"
-                                                >Checkout</a
-                                            >
-                                        </div>
-                                    </div>
-                                    <!--/ End Shopping Item -->
+                                        <span
+                                            class="total-count"
+                                            data-store-el="cartItemsCounter"
+                                        ></span
+                                    ></a>
                                 </div>
                             </div>
                         </div>
@@ -264,103 +202,41 @@
                                     <th class="text-center">REMOVE</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td class="image" data-title="No">
-                                        <img
-                                            src="https://via.placeholder.com/100x100"
-                                            alt="#"
-                                        />
-                                    </td>
-                                    <td
-                                        class="product-des"
-                                        data-title="Description"
-                                    >
-                                        <p class="product-name">
-                                            <a href="#">Women Dress</a>
-                                        </p>
-                                        <p class="product-des">
-                                            Maboriosam in a tonto nesciung eget
-                                            distingy magndapibus.
-                                        </p>
-                                    </td>
-                                    <td class="price" data-title="Price">
-                                        <span>$110.00 </span>
-                                    </td>
-                                    <td class="action" data-title="Remove">
-                                        <a href="#"
-                                            ><i
-                                                class="fa fa-heart-o"
-                                                aria-hidden="true"
-                                            ></i
-                                        ></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="image" data-title="No">
-                                        <img
-                                            src="https://via.placeholder.com/100x100"
-                                            alt="#"
-                                        />
-                                    </td>
-                                    <td
-                                        class="product-des"
-                                        data-title="Description"
-                                    >
-                                        <p class="product-name">
-                                            <a href="#">Women Dress</a>
-                                        </p>
-                                        <p class="product-des">
-                                            Maboriosam in a tonto nesciung eget
-                                            distingy magndapibus.
-                                        </p>
-                                    </td>
-                                    <td class="price" data-title="Price">
-                                        <span>$110.00 </span>
-                                    </td>
-                                    <td class="action" data-title="Remove">
-                                        <a href="#"
-                                            ><i
-                                                class="fa fa-heart-o"
-                                                aria-hidden="true"
-                                            ></i
-                                        ></a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="image" data-title="No">
-                                        <img
-                                            src="https://via.placeholder.com/100x100"
-                                            alt="#"
-                                        />
-                                    </td>
-                                    <td
-                                        class="product-des"
-                                        data-title="Description"
-                                    >
-                                        <p class="product-name">
-                                            <a href="#">Women Dress</a>
-                                        </p>
-                                        <p class="product-des">
-                                            Maboriosam in a tonto nesciung eget
-                                            distingy magndapibus.
-                                        </p>
-                                    </td>
-                                    <td class="price" data-title="Price">
-                                        <span>$110.00 </span>
-                                    </td>
-                                    <td class="action" data-title="Remove">
-                                        <a href="#"
-                                            ><i
-                                                class="fa fa-heart-o"
-                                                aria-hidden="true"
-                                            ></i
-                                        ></a>
-                                    </td>
-                                </tr>
-                            </tbody>
+                            <tbody data-store-el="favoriteItems"></tbody>
                         </table>
                         <!--/ End Shopping Summery -->
+
+                        <template data-store-el="favoritesItemTemplate">
+                            <tr>
+                                <td class="image" data-title="No">
+                                    <img data-store-el="itemImage" alt="#" />
+                                </td>
+                                <td
+                                    class="product-des"
+                                    data-title="Description"
+                                >
+                                    <p class="product-name">
+                                        <a data-store-el="itemTitle"></a>
+                                    </p>
+                                    <p
+                                        class="product-des"
+                                        data-store-el="itemDescription"
+                                    ></p>
+                                </td>
+                                <td class="price" data-title="Price">
+                                    <span data-store-el="itemPrice"></span>
+                                </td>
+                                <td class="action" data-title="Remove">
+                                    <a
+                                        ><i
+                                            data-store-el="itemToggleFavorite"
+                                            class="fa fa-heart-o"
+                                            aria-hidden="true"
+                                        ></i
+                                    ></a>
+                                </td>
+                            </tr>
+                        </template>
                     </div>
                 </div>
             </div>
@@ -403,5 +279,8 @@
         <script src="js/easing.js"></script>
         <!-- Active JS -->
         <script src="js/active.js"></script>
+
+        <script src="js/store.js"></script>
+        <script src="products.js"></script>
     </body>
 </html>
