--- a/checkout.html
+++ b/checkout.html
@@ -1087,11 +1087,14 @@
                             <!-- Button Widget -->
                             <div class="single-widget get-button">
                                 <div class="content">
-                                    <div class="button">
-                                        <a href="#" class="btn"
-                                            >proceed to checkout</a
+                                    <a class="button">
+                                        <button
+                                            class="btn"
+                                            data-store-el="cartEmptyDisabled"
                                         >
-                                    </div>
+                                            proceed to checkout
+                                        </button>
+                                    </a>
                                 </div>
                             </div>
                             <!--/ End Button Widget -->
