--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                                 <div class="single-product">
                                                     <div class="product-img">
                                                         <a
-                                                            href="product-details.html"
+                                                            data-store-el="itemLink"
                                                         >
                                                             <img
                                                                 class="default-img"
@@ -306,7 +306,7 @@
                                                         <div
                                                             class="product-price"
                                                         >
-                                                            <span
+                                                            $<span
                                                                 data-store-el="itemPrice"
                                                             ></span>
                                                         </div>
