--- a/favorite.html
+++ b/favorite.html
@@ -224,7 +224,7 @@
                                     ></p>
                                 </td>
                                 <td class="price" data-title="Price">
-                                    <span data-store-el="itemPrice"></span>
+                                    $<span data-store-el="itemPrice"></span>
                                 </td>
                                 <td class="action" data-title="Remove">
                                     <a
