--- a/cart.html
+++ b/cart.html
@@ -81,7 +81,7 @@
                             <div class="right-bar">
                                 <!-- Search Form -->
                                 <div class="sinlge-bar">
-                                    <a href="#" class="single-icon"
+                                    <a href="favorite.html" class="single-icon"
                                         ><i
                                             class="fa fa-heart-o"
                                             aria-hidden="true"
