--- a/favorite.html
+++ b/favorite.html
@@ -81,7 +81,7 @@
                             <div class="right-bar">
                                 <!-- Search Form -->
                                 <div class="sinlge-bar">
-                                    <a href="#" class="single-icon"
+                                    <a href="favorite.html" class="single-icon"
                                         ><i
                                             class="fa fa-heart-o"
                                             aria-hidden="true"
@@ -251,8 +251,6 @@
         <script src="js/popper.min.js"></script>
         <!-- Bootstrap JS -->
         <script src="js/bootstrap.min.js"></script>
-        <!-- Color JS -->
-        <script src="js/colors.js"></script>
         <!-- Slicknav JS -->
         <script src="js/slicknav.min.js"></script>
         <!-- Owl Carousel JS -->
