--- a/product-details.html
+++ b/product-details.html
@@ -81,7 +81,7 @@
                             <div class="right-bar">
                                 <!-- Search Form -->
                                 <div class="sinlge-bar">
-                                    <a href="#" class="single-icon"
+                                    <a href="favorite.html" class="single-icon"
                                         ><i
                                             class="fa fa-heart-o"
                                             aria-hidden="true"
@@ -191,7 +191,9 @@
                                             data-store-el="itemTitle"
                                         ></h2>
                                         <div class="blog-meta">
-                                            <span class="author"
+                                            <span
+                                                class="author"
+                                                style="cursor: pointer"
                                                 ><a
                                                     data-store-el="itemAddToCart"
                                                     ><i class="ti-bag"></i>Add
@@ -243,222 +245,64 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <div class="owl-carousel popular-slider">
-                            <!-- Start Single Product -->
-                            <div class="single-product">
-                                <div class="product-img">
-                                    <a href="product-details.html">
-                                        <img
-                                            class="default-img"
-                                            src="https://via.placeholder.com/550x750"
-                                            alt="#"
-                                        />
-                                        <img
-                                            class="hover-img"
-                                            src="https://via.placeholder.com/550x750"
-                                            alt="#"
-                                        />
-                                        <span class="out-of-stock">Hot</span>
-                                    </a>
-                                    <div class="button-head">
-                                        <div class="product-action">
+                        <div
+                            class="owl-carousel popular-slider"
+                            data-store-el="catalogItems"
+                        >
+                            <template data-store-el="catalogItemTemplate">
+                                <!-- Start Single Product -->
+                                <div class="single-product">
+                                    <div class="product-img">
+                                        <a href="product-details.html">
+                                            <img
+                                                class="default-img"
+                                                data-store-el="itemImage"
+                                                alt="#"
+                                            />
+                                            <img
+                                                class="hover-img"
+                                                data-store-el="itemImage"
+                                                alt="#"
+                                            />
+                                        </a>
+                                        <div class="button-head">
+                                            <div class="product-action">
+                                                <a title="Wishlist"
+                                                    ><i
+                                                        data-store-el="itemToggleFavorite"
+                                                        class="ti-heart"
+                                                    ></i
+                                                    ><span
+                                                        >Add to Wishlist</span
+                                                    ></a
+                                                >
+                                            </div>
+                                            <div class="product-action-2">
+                                                <a
+                                                    title="Add to cart"
+                                                    data-store-el="itemAddToCart"
+                                                    >Add to cart</a
+                                                >
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="product-content">
+                                        <h3>
                                             <a
-                                                data-toggle="modal"
-                                                data-target="#exampleModal"
-                                                title="Quick View"
-                                                href="#"
-                                                ><i class="ti-eye"></i
-                                                ><span>Quick Shop</span></a
-                                            >
-                                            <a title="Wishlist" href="#"
-                                                ><i class="ti-heart"></i
-                                                ><span>Add to Wishlist</span></a
-                                            >
-                                            <a title="Compare" href="#"
-                                                ><i class="ti-bar-chart-alt"></i
-                                                ><span>Add to Compare</span></a
-                                            >
-                                        </div>
-                                        <div class="product-action-2">
-                                            <a title="Add to cart" href="#"
-                                                >Add to cart</a
-                                            >
+                                                href="product-details.html"
+                                                data-store-el="itemTitle"
+                                            ></a>
+                                        </h3>
+                                        <div class="product-price">
+                                            <span>$</span>
+                                            <span
+                                                data-store-el="itemPrice"
+                                            ></span>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="product-content">
-                                    <h3>
-                                        <a href="product-details.html"
-                                            >Black Sunglass For Women</a
-                                        >
-                                    </h3>
-                                    <div class="product-price">
-                                        <span class="old">$60.00</span>
-                                        <span>$50.00</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- End Single Product -->
-                            <!-- Start Single Product -->
-                            <div class="single-product">
-                                <div class="product-img">
-                                    <a href="product-details.html">
-                                        <img
-                                            class="default-img"
-                                            src="https://via.placeholder.com/550x750"
-                                            alt="#"
-                                        />
-                                        <img
-                                            class="hover-img"
-                                            src="https://via.placeholder.com/550x750"
-                                            alt="#"
-                                        />
-                                    </a>
-                                    <div class="button-head">
-                                        <div class="product-action">
-                                            <a
-                                                data-toggle="modal"
-                                                data-target="#exampleModal"
-                                                title="Quick View"
-                                                href="#"
-                                                ><i class="ti-eye"></i
-                                                ><span>Quick Shop</span></a
-                                            >
-                                            <a title="Wishlist" href="#"
-                                                ><i class="ti-heart"></i
-                                                ><span>Add to Wishlist</span></a
-                                            >
-                                            <a title="Compare" href="#"
-                                                ><i class="ti-bar-chart-alt"></i
-                                                ><span>Add to Compare</span></a
-                                            >
-                                        </div>
-                                        <div class="product-action-2">
-                                            <a title="Add to cart" href="#"
-                                                >Add to cart</a
-                                            >
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="product-content">
-                                    <h3>
-                                        <a href="product-details.html"
-                                            >Women Hot Collection</a
-                                        >
-                                    </h3>
-                                    <div class="product-price">
-                                        <span>$50.00</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- End Single Product -->
-                            <!-- Start Single Product -->
-                            <div class="single-product">
-                                <div class="product-img">
-                                    <a href="product-details.html">
-                                        <img
-                                            class="default-img"
-                                            src="https://via.placeholder.com/550x750"
-                                            alt="#"
-                                        />
-                                        <img
-                                            class="hover-img"
-                                            src="https://via.placeholder.com/550x750"
-                                            alt="#"
-                                        />
-                                        <span class="new">New</span>
-                                    </a>
-                                    <div class="button-head">
-                                        <div class="product-action">
-                                            <a
-                                                data-toggle="modal"
-                                                data-target="#exampleModal"
-                                                title="Quick View"
-                                                href="#"
-                                                ><i class="ti-eye"></i
-                                                ><span>Quick Shop</span></a
-                                            >
-                                            <a title="Wishlist" href="#"
-                                                ><i class="ti-heart"></i
-                                                ><span>Add to Wishlist</span></a
-                                            >
-                                            <a title="Compare" href="#"
-                                                ><i class="ti-bar-chart-alt"></i
-                                                ><span>Add to Compare</span></a
-                                            >
-                                        </div>
-                                        <div class="product-action-2">
-                                            <a title="Add to cart" href="#"
-                                                >Add to cart</a
-                                            >
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="product-content">
-                                    <h3>
-                                        <a href="product-details.html"
-                                            >Awesome Pink Show</a
-                                        >
-                                    </h3>
-                                    <div class="product-price">
-                                        <span>$50.00</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- End Single Product -->
-                            <!-- Start Single Product -->
-                            <div class="single-product">
-                                <div class="product-img">
-                                    <a href="product-details.html">
-                                        <img
-                                            class="default-img"
-                                            src="https://via.placeholder.com/550x750"
-                                            alt="#"
-                                        />
-                                        <img
-                                            class="hover-img"
-                                            src="https://via.placeholder.com/550x750"
-                                            alt="#"
-                                        />
-                                    </a>
-                                    <div class="button-head">
-                                        <div class="product-action">
-                                            <a
-                                                data-toggle="modal"
-                                                data-target="#exampleModal"
-                                                title="Quick View"
-                                                href="#"
-                                                ><i class="ti-eye"></i
-                                                ><span>Quick Shop</span></a
-                                            >
-                                            <a title="Wishlist" href="#"
-                                                ><i class="ti-heart"></i
-                                                ><span>Add to Wishlist</span></a
-                                            >
-                                            <a title="Compare" href="#"
-                                                ><i class="ti-bar-chart-alt"></i
-                                                ><span>Add to Compare</span></a
-                                            >
-                                        </div>
-                                        <div class="product-action-2">
-                                            <a title="Add to cart" href="#"
-                                                >Add to cart</a
-                                            >
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="product-content">
-                                    <h3>
-                                        <a href="product-details.html"
-                                            >Awesome Bags Collection</a
-                                        >
-                                    </h3>
-                                    <div class="product-price">
-                                        <span>$50.00</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- End Single Product -->
+                                <!-- End Single Product -->
+                            </template>
                         </div>
                     </div>
                 </div>
