--- a/checkout.html
+++ b/checkout.html
@@ -81,7 +81,7 @@
                             <div class="right-bar">
                                 <!-- Search Form -->
                                 <div class="sinlge-bar">
-                                    <a href="#" class="single-icon"
+                                    <a href="favorite.html" class="single-icon"
                                         ><i
                                             class="fa fa-heart-o"
                                             aria-hidden="true"
@@ -1087,7 +1087,7 @@
                             <!-- Button Widget -->
                             <div class="single-widget get-button">
                                 <div class="content">
-                                    <a class="button">
+                                    <a class="button" href="thanks.html">
                                         <button
                                             class="btn"
                                             data-store-el="cartEmptyDisabled"
