--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <div class="right-bar">
                                 <!-- Search Form -->
                                 <div class="sinlge-bar">
-                                    <a href="#" class="single-icon"
+                                    <a href="favorite.html" class="single-icon"
                                         ><i
                                             class="fa fa-heart-o"
                                             aria-hidden="true"
@@ -258,7 +258,7 @@
                                                             <div
                                                                 class="product-action"
                                                             >
-                                                                <a
+                                                                <!-- <a
                                                                     data-toggle="modal"
                                                                     data-target="#exampleModal"
                                                                     title="Quick View"
@@ -269,7 +269,7 @@
                                                                         >Quick
                                                                         Shop</span
                                                                     ></a
-                                                                >
+                                                                > -->
                                                                 <a
                                                                     title="Wishlist"
                                                                     ><i
